WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268760
[Site Isolation][Mac] Find text indicator is incorrectly offset
https://bugs.webkit.org/show_bug.cgi?id=268760
Summary
[Site Isolation][Mac] Find text indicator is incorrectly offset
Charlie Wolfe
Reported
2024-02-05 10:37:56 PST
rdar://121979834
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2024-02-05 10:40:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23871
EWS
Comment 2
2024-02-06 09:19:12 PST
Committed
274148@main
(1e17d8281dbd): <
https://commits.webkit.org/274148@main
> Reviewed commits have been landed. Closing PR #23871 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug